apps/shogi_engine_rs/build_log.txt
    Checking shogi_engine_rs v0.1.0 (C:\Users\Yuto\Desktop\app\shogi_engine_rs)
error[E0425]: cannot find value `to_sq` in this scope
   --> src\board.rs:635:17
    |
635 |                 to_sq,
    |                 ^^^^^ not found in this scope

error[E0425]: cannot find value `to_sq` in this scope
   --> src\board.rs:644:17
    |
644 |                 to_sq,
    |                 ^^^^^ not found in this scope

error[E0425]: cannot find value `to_sq` in this scope
   --> src\board.rs:657:21
    |
657 |                     to_sq,
    |                     ^^^^^ not found in this scope

warning: unused import: `regex::Regex`
 --> src\board.rs:2:5
  |
2 | use regex::Regex;
  |     ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src\board.rs:543:76
    |
543 |                         self._append_move(from_idx, tgt_idx, moves, color, false);
    |                              ------------                                  ^^^^^ expected `PieceType`, found `bool`
    |                              |
    |                              arguments to this method are incorrect
    |
note: method defined here
   --> src\board.rs:601:8
    |
601 |     fn _append_move(
    |        ^^^^^^^^^^^^
...
607 |         p_type: PieceType,
    |         -----------------

error[E0308]: mismatched types
   --> src\board.rs:545:76
    |
545 |                         self._append_move(from_idx, tgt_idx, moves, color, false); // Capture
    |                              ------------                                  ^^^^^ expected `PieceType`, found `bool`
    |                              |
    |                              arguments to this method are incorrect
    |
note: method defined here
   --> src\board.rs:601:8
    |
601 |     fn _append_move(
    |        ^^^^^^^^^^^^
...
607 |         p_type: PieceType,
    |         -----------------

warning: unused variable: `file`
   --> src\board.rs:356:26
    |
356 |                     let (file, rank) = Self::to_file_rank(sq);
    |                          ^^^^ help: if this is intentional, prefix it with an underscore: `_file`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `rank`
   --> src\board.rs:356:32
    |
356 |                     let (file, rank) = Self::to_file_rank(sq);
    |                                ^^^^ help: if this is intentional, prefix it with an underscore: `_rank`

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
warning: `shogi_engine_rs` (lib) generated 3 warnings
error: could not compile `shogi_engine_rs` (lib) due to 5 previous errors; 3 warnings emitted
